# github-mail-reader

./: .gitignore  README.md  config.sample.toml  github-mail-reader.py  pyproject.toml
