[tool.poetry]
name = "github-mail-reader"
version = "0.1.0"
description = ""
authors = ["Christophe Simonis <christophe@kn.gl>"]

[tool.poetry.dependencies]
python = "^3.7"
imap-tools = "^0.55.0"
requests = "^2.28.0"
rich = "^12.4.4"
tomli = "^2.0.1"
idna = "^3.3"
charset-normalizer = "^2.0.12"
Pygments = "^2.11.2"
typing-extensions = "^4.1.1"
urllib3 = "^1.26.8"
certifi = "^2022.6.15"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
q = "^2.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
